tabun_stat: 2021 update (forgot to commit)

--- a/tabun_stat/config.example.toml
+++ b/tabun_stat/config.example.toml
@@ -10,7 +10,7 @@ destination = "./stat"
 # для большей консистентности результата и чтобы всякие OLEG778 не мешались.
 # На юзеров и блоги не влияет.
 min_date = 2011-08-11T00:00:00+04:00
-# max_date = 2018-08-12T00:00:00+03:00
+max_date = 2021-08-12T00:00:00+03:00
 
 # Часовой пояс, который используется некоторыми обработчиками для определения
 # границы суток и для форматирования вывода.
@@ -150,6 +150,11 @@ name = ":users_ratings.UsersRatingsProcessor"
 # с учётом закрытых блогов и без учёта. Также отдельно считает статистику
 # без учёта ботов. Для статистики MineOzelot вставлен отдельный игнорирующий
 # костыль.
+#
+# Это самый жрущий оперативку обработчик, так как он хранит все слова и всех
+# пользователей в памяти (при обработке всей базы Табуна потребление доходит
+# до 4 гигабайт).
+#
 # Создаёт файл:
 # - words.csv
 [[processors]]
